apps/base/alloy/alloy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy
  namespace: alloy
spec:
  selector:
    app.kubernetes.io/name: alloy
  ports:
    - name: http
      port: 12345
      targetPort: 12345
